Fixes spacing between notice lists.

--- a/myuw/static/css/notices.less
+++ b/myuw/static/css/notices.less
@@ -69,18 +69,12 @@
 
         /* Contents of notice. Some notices have more than one */
         .notice-body-with-title {
-            
             display: inline-block;
             margin: 0 0.35em 0 0;
-
-            &:last-child {
-                margin-top: 1.42857143em;
-            }
-
         }
 
         .notice-list {
-            margin-top: 1.42857143em;
+            margin: 1.42857143em 0;
         }
     }
 }
